Fix mobile menu causing horizontal scroll

--- a/css/components.css
+++ b/css/components.css
@@ -123,6 +123,7 @@
         top: var(--header-height-mobile);
         left: 0;
         right: 0;
+        width: 100%;
         height: calc(100vh - var(--header-height-mobile));
         flex-direction: column;
         justify-content: center;
