--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,11 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: var(--font-primary);
     font-size: var(--text-base);
